[package]
name = "stack_ledger"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros"] } # might need to add chrono
thiserror = "2.0"
twox-hash = "2.0"
fastrand = "2.3"
